# vv-app1-qra

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
data/inputs/: demo_input.csv
data/outputs/: qra_output_20260107_160424.csv  qra_output_20260107_160424.html
docs/: CI_BILLING_LOCK.md  INTERNAL_AI_VALIDATION_APP1_QRA.md  RECRUTEUR_FAQ.md  ROOT_SETUP_DEPENDENCIES.md  architecture.md  before_after.md  demo_pitch.md  demo_scenario.md  demo_walkthrough.md  env_report.json  env_report.md  recruiter_faq.md
docs/demo/: README.md  RECRUTEUR_FAQ.md  demo_scenario.md  demo_walkthrough.md
docs/demo/assets/outputs_ai/: rapport.html  report.html  results.csv
docs/demo/assets/outputs_no_ai/: rapport.html  report.html  results.csv
docs/outputs_demo/: qra_output_demo.csv  qra_output_demo.html
src/vv_app1_qra/: __init__.py  ia_assistant.py  main.py  models.py  report.py  rules.py
templates/TEMPLATES_REF/: README.md
templates/qra/: report_base.html  report_qra.html
tests/: test_env_check.py  test_ia_assistant.py  test_main.py  test_models.py  test_report.py  test_rules.py
tools/: load_env_secret.ps1
